# mcpwarden

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/mcpwarden/: cli.py  config.py  detectors.py  findings.py  lockfile.py  mcpclient.py  report.py
tests/: test_cli.py  test_config.py  test_detectors.py  test_lockfile.py  test_poison.py
